ESFDC/src/objects/Buyer__c.object
<CustomObject>
    <fields>
        <fullName>Buyer_Address__c</fullName>
        <label>Buyer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Email__c</fullName>
        <label>Buyer Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Buyer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>